updated some styling

--- a/index.html
+++ b/index.html
@@ -52,21 +52,38 @@ $(document).ready(function(){
 </script>
 <style>
 
+body{
+	font-family: "Helvetica Neue", sans-serif; 
+	width: 480px;
+}
+
 .dice{
 	height: 50px;
 	width: 50px;
-	background-color: yellow;
+	background-color: #f0f0f0;
 	margin: 10px 10px 10px 10px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 2.2em;
+}
+
+.h1{
+	width: auto;
+	font-size: 3em;
+	text-align: center;
 }
 
 .header{
-	height: 100px;
+	width: auto;
+	text-align: center;
 }
 </style>
 </head>
 <body>
 
-<div class="header"></div>
+<div class="h1">Liar's Dice</div>
+
+<div class="header">Instruction: Refresh the page to roll the dice</div>
 
 <div class="dice" id="dice1"></div>
 <div class="dice" id="dice2"></div>
