--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <html>
 <head>
+    
+    <title>Liar's Dice</title>
+
+    <link href="/Flat-UI-master/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/Flat-UI-master/css/flat-ui.css" rel="stylesheet">
 
 <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js"></script>
 
 <script>
-
-
-var dice1 = Math.floor(Math.random()*6+1);
-var dice2 = Math.floor(Math.random()*6+1);
-var dice3 = Math.floor(Math.random()*6+1);
-var dice4 = Math.floor(Math.random()*6+1);
-var dice5 = Math.floor(Math.random()*6+1);
 
 function selectImage(dice){
 	var imageLink;
@@ -41,13 +39,22 @@ $("#dice5").prepend('<img src = "' + selectImage(dice5) + '"">');
 */
 
 $(document).ready(function(){
-	$("#dice1").text(dice1);
-	$("#dice2").text(dice2);
-	$("#dice3").text(dice3);
-	$("#dice4").text(dice4);
-	$("#dice5").text(dice5);	
-});
+	function roll(){
+		$("#dice1").text(Math.floor(Math.random()*6+1));
+		$("#dice2").text(Math.floor(Math.random()*6+1));
+		$("#dice3").text(Math.floor(Math.random()*6+1));
+		$("#dice4").text(Math.floor(Math.random()*6+1));
+		$("#dice5").text(Math.floor(Math.random()*6+1));
+	};
+	
+	roll();		//First roll on page load
+	
 
+	$("#roll").click(function(){
+		roll();
+	});			//Roll Dice Button
+	
+});
 
 </script>
 <style>
@@ -55,6 +62,7 @@ $(document).ready(function(){
 body{
 	font-family: "Helvetica Neue", sans-serif; 
 	width: 480px;
+	background-color: #f0f0f0;
 }
 
 .dice{
@@ -65,17 +73,39 @@ body{
 	text-align: center;
 	vertical-align: middle;
 	font-size: 2.2em;
+	display: inline-block;
 }
 
 .h1{
 	width: auto;
 	font-size: 3em;
 	text-align: center;
+	margin-bottom: 30px;
 }
 
-.header{
+#roll{
+	display: block;
+	margin-left: 175px;
+}
+
+.container{
 	width: auto;
 	text-align: center;
+	margin-bottom: 50px;
+}
+
+.btn {
+  color: #ffffff;
+  background-color: #1abc9c;
+  border: none;
+  font-size: 15px;
+  font-weight: normal;
+  line-height: 1.4;
+  border-radius: 4px;
+  padding: 10px 15px;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -webkit-transition: 0.25s linear;
+  transition: 0.25s linear;
 }
 </style>
 </head>
@@ -83,12 +113,19 @@ body{
 
 <div class="h1">Liar's Dice</div>
 
-<div class="header">Instruction: Refresh the page to roll the dice</div>
+<div class="container">
+	<div class="dice" id="dice1"></div>
+	<div class="dice" id="dice2"></div>
+	<div class="dice" id="dice3"></div>
+	<div class="dice" id="dice4"></div>
+	<div class="dice" id="dice5"></div>
+</div>
 
-<div class="dice" id="dice1"></div>
-<div class="dice" id="dice2"></div>
-<div class="dice" id="dice3"></div>
-<div class="dice" id="dice4"></div>
-<div class="dice" id="dice5"></div>
+
+<button class="btn btn-default btn-wide" id="roll">
+	Roll Dice
+</button>
+
+
 </body>
 </html>
