--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     
     <title>Liar's Dice</title>
 
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no; target-densityDpi=device-dpi" />
+
     <link href="/Flat-UI-master/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="/Flat-UI-master/css/flat-ui.css" rel="stylesheet">
 
