--- a/index.html
+++ b/index.html
@@ -12,55 +12,20 @@
 <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js"></script>
 
 <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-var dice1 = Math.floor(Math.random()*6+1);
-var dice2 = Math.floor(Math.random()*6+1);
-var dice3 = Math.floor(Math.random()*6+1);
-var dice4 = Math.floor(Math.random()*6+1);
-var dice5 = Math.floor(Math.random()*6+1);
-
-function selectImage(dice){
-	var imageLink;
-	switch(dice){
-		case 1:
-			imageLink = "./img/1.png";
-		case 2:
-			imageLink = "./img/2.png";
-		case 3:
-			imageLink = "./img/3.png";
-		case 4:
-			imageLink = "./img/4.png";
-		case 5:
-			imageLink = "./img/5.png";
-		case 6:
-			imageLink = "./img/6.png";	
-
-	}
-
-	return imageLink;
-}
-
-
-$(document).ready(function(){
-
-	function roll(){
-		$("#dice1").text(Math.floor(Math.random()*6+1));
-		$("#dice2").text(Math.floor(Math.random()*6+1));
-		$("#dice3").text(Math.floor(Math.random()*6+1));
-		$("#dice4").text(Math.floor(Math.random()*6+1));
-		$("#dice5").text(Math.floor(Math.random()*6+1));
-	};
-	
-	roll();		//First roll on page load
-	
-
-	$("#roll").click(function(){
-		roll();
-	});			//Roll Dice Button
-	
-});
+  ga('create', 'UA-46504100-1', 'liarsdiceonline.com');
+  ga('send', 'pageview');
 
 </script>
+
+<script src="js/index.js"></script>
+
+
+
 <style>
 
 body{
